--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,16 @@
   gap: 9px;
   color: orange;
 }
+
+.passgen button:hover{
+  background-color: rgb(27, 27, 199);
+  color: white;
+  padding: 9px;
+  border-radius: 9px;
+  border: 1px solid white;
+  margin-left: 9px;
+  transform: scale(1.05);
+  transition: 0.7s ;
+  cursor: pointer;
+  box-shadow: 0px 0px 8px aquamarine;
+}
